# md-reader

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
