[package]
name = "inkwell-md"
version = "0.1.0"
description = "A clean, minimal Markdown editor"
authors = [""]
edition = "2021"

[lib]
name = "inkwell_md_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "inkwell-md"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
tokio = { version = "1", features = ["full"] }
